@@ -64,6 +64,7 @@ Version 1.3
    setting. (Justin)
  - Make sure we refresh all UserCodes upto the first available slot unless
    RefreshAllUserCodes is true in Options.xml (Justin)
+ - Added Qubino ZMNHIA2 device thanks to Paul (Alex)
 
 Version 1.2 
  - Released on 15/10/14
